# Prototype-Seq-Lab-API

./: APITests.py  Procfile  README.md  pyproject.toml  requirements.txt  seqlabAPI2.py
templates/: homepage.html
