[tool.poetry]
name = "seq-lab-api"
version = "0.2.0"
description = "Sequencing Laboratory API back end and front end code"
authors = ["Sahil Sewani"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
pymysql = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
